--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
     "autoprefixer": "10.4.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -18,7 +19,6 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "rxjs": "^7.5.5",
     "sass": "^1.52.2",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
